# unity-claude-template

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.en.md  README.md  RULES.md
.claude/: INDEX.md  settings.json
.claude/agents/: task-engineer.md  task-researcher.md
.claude/domain/: README.md
.claude/knowledge/: RULES.md  csharp-dotnet.md  unity-editor-automation.md  unity-mobile-performance.md  unity-scripting-gotchas.md
.claude/knowledge/debugging/: 01-doubt-assumptions.md  02-classify-first.md  03-symptom-vs-cause.md  04-understand-before-fix.md  05-bug-journal.md  06-static-analysis.md  07-no-print-debug-abuse.md  08-assertions.md  09-reframe-when-stuck.md  10-binary-split.md
.claude/knowledge/qa/: 01-narrow-test-cases.md  02-separate-environments.md  03-test-early-often.md  (+7 more)
.claude/rules/: asmdef.md  parallel-work.md  scripts.md
.claude/skills/: lsp-setup.md  make-asset.md  run.md  self-update.md  synth.md  task-done.md  task-start.md
.claude/tests/: debug-skill-results.md  debug-skill-scenarios.md
Assets/Editor/: ParallelAgentSetup.cs  RunBuildCommand.cs
ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
design/: README.md
docs/: 용어사전.md
docs/images/: README.md
scripts/: bridge-run.sh  cleanup-worktrees.sh  create-symlinked-worktrees.sh  create-worktrees.sh  ensure-worktree-setup.sh  run-editor.sh  run.sh  setup-symlinked-worktree.sh  wait-editor.sh
scripts/chiptune-synth/: synth.py
scripts/claude-bridge-mcp/: README.md  pyproject.toml  server.py
scripts/claude-bridge-mcp/claude_bridge_mcp/: __init__.py  server.py
(+42 files in other folders)
